# luksd

./: .gitignore  Cargo.toml  LICENSE  PROTOCOL.md  README.md  enroll.sh  enroll_tpm.sh  get_key.sh  get_key_tpm.sh  tpm2.Dockerfile
initramfs/: create.sh  custom.sh  hooks.sh  luks-decrypt.sh
luksclient/: go.mod  go.sum  main.go
luksclient/cmd/: main.go
luksclient/cmd/luksclient/: client.go  decrypt.go  root.go
luksclient/cmd/luksctl/: checkquote.go  decrypt.go  register.go  root.go
luksclient/internal/checkquote/: checkquote.go
luksclient/internal/client/: client.go  types.go
luksclient/internal/client/register/: register.go
luksclient/internal/decrypt/: decrypt.go
luksclient/internal/register/: register.go
luksclient/internal/types/: types.go
luksclient/internal/utils/: utils.go
luksd/: Cargo.toml
luksd/src/: api.rs  main.rs
